fixed browse search bar spacing

--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -10,7 +10,9 @@
 }
 
 .search-form {
-	float: left;
+	padding-top:20px;
+	padding-right: 101px;
+    padding-left: 101px;
 }
 
 .btn-search {
@@ -18,7 +20,7 @@
 	float:right;
 	border-style: none; 
 	background-color: #005DA0;
-	width: 36px; height: 36px;
+	width: 38px; height: 38px;
 }
 
 .inner-search-bar {
